# superhat

./: .gitignore  Cargo.toml  README.md  build.sh  prompt.md  run.sh  superhat.cfg
.github/workflows/: rust.yml
config/: BMS - Superhat.key
src/: config.rs  direction.rs  head_tracking.rs  main.rs  mfd_keys.rs  osb.rs  sound.rs  tests.rs  ui.rs  winstance.rs
