[package]
name = "superhat"
version = "0.1.0"
edition = "2021"

[dependencies]
gilrs = "0.10"
tokio = { version = "1.0", features = ["full"] }
winky = { git = "https://github.com/glenmurphy/winky/" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
crossterm = "0.27"
windows = { version = "0.48", features = [
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Controls"
]}

[profile.release]
# binary size reduction from https://github.com/johnthagen/min-sized-rust
strip = true      # small impact
opt-level = "z"   # big impact
lto = true        # small impact
codegen-units = 1 # small impact
panic = "abort"   # big impact